@@ -21,3 +21,6 @@ dev.1.0.4.20240327
 dev.1.0.5.20240508
 1. Synchronize the main ncnn repository
 2. Fix missing approximate parameters of nn.GELU
+
+dev.1.0.6.20240511
+1. Add new pass trans_Stack2Unsqueeze, When using torch.stack with a single input and effectively achieving the same result as torch.unsqueeze
